# Squawkbot

./: LICENSE  README.md  pyproject.toml  setup.py
SquawkBot/: __init__.py  squawkbot.py
