[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squawkbot"
version = "0.1.0"
dependencies = [
    "aiohttp==3.9.5",
    "PyQt6==6.7.0",
    "requests==2.31.0",
    "twitchio==2.8.0",
    "obsws-python>=1.0.3",
    "pywin32==306; platform_system=='Windows'",
    "watchdog==4.0.1"
]
requires-python = ">=3.11"
authors = [
    { name = "Javier", email = "daywon1@gmail.com" }
]
description = "A Twitch bot for managin' raids, clips, and OBS integration, arrgh!"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
squawkbot = "squawkbot.squawkbot:main"
